static/less/popover.less
/* POPOVER START ------------------------- */

.popover{
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  z-index: 1000;
  min-width: 220px;
  
  &.right {
    margin-top: 11px;
    margin-left: 3px;
  }

  .close{
    font-size: 14px;
    padding:2px;
  }
}


.success .popover{
  background-color: @green-translucent;
  &.right > .arrow{border-right-color:transparent}
  &.right > .arrow:after{border-right-color:@green-translucent}
  &.left > .arrow{border-left-color:transparent}
  &.left > .arrow:after{border-left-color:@green-translucent}
  &.top > .arrow{border-top-color:transparent}
  &.top > .arrow:after{border-top-color:@green-translucent}
  &.bottom > .arrow{border-bottom-color:transparent}
  &.bottom > .arrow:after{border-bottom-color:@green-translucent}
  .popover-title{background-color:transparent;color:@white;border:none;font-weight:bold}
  .popover-content{color:@white;}
  border: none;
}

.warning .popover{
  background-color: @yellow-translucent;
  &.right > .arrow{border-right-color:transparent}
  &.right > .arrow:after{border-right-color:@yellow-translucent}
  &.left > .arrow{border-left-color:transparent}
  &.left > .arrow:after{border-left-color:@yellow-translucent}
  &.top > .arrow{border-top-color:transparent}
  &.top > .arrow:after{border-top-color:@yellow-translucent}
  &.bottom > .arrow{border-bottom-color:transparent}
  &.bottom > .arrow:after{border-bottom-color:@yellow-translucent}
  .popover-title{background-color:transparent;color:@white;border:none;font-weight:bold}
  border: none;
}

.error .popover{
  background-color: @red-translucent;
  &.right > .arrow{border-right-color:transparent}
  &.right > .arrow:after{border-right-color:@red-translucent}
  &.left > .arrow{border-left-color:transparent}
  &.left > .arrow:after{border-left-color:@red-translucent}
  &.top > .arrow{border-top-color:transparent}
  &.top > .arrow:after{border-top-color:@red-translucent}
  &.bottom > .arrow{border-bottom-color:transparent}
  &.bottom > .arrow:after{border-bottom-color:@red-translucent}
  .popover-title{background-color:transparent;color:@white;border:none;font-weight:bold}
  .popover-content{color: @white;}
  border: none;
}

h3 {font:bold 15px/18px @paragraph-font, sans-serif; border:none; background:none;padding-bottom:0;}
.popover-content{font-size:12px;color:@grey-darker;}


.footer-sticky .popover,
.modal-footer .popover{
  padding:12px;
  .close{display:none;}
}
.footer-sticky .popover{margin-top:-30px;}

/* POPOVER END ------------------------- */

